# minute_meetings

./: .gitignore  README.md  code_cells_dump.txt  meeting_minutes.ipynb  meeting_minutes.py  pyproject.toml  requirements.txt
agendas/: Ordre du jour du 2 décembre 2025.docx
